# code_snippets

./: README.md  gotcha.md  run_format.sh
cloth_simulation/: README.md
cloth_simulation/MosegaardsClothTutorial_cmake/: CMakelists.txt  README.md
cv/: rigid_transform_inv.py
distributed/pyro4/: README.md  greeting-client.py  greeting-server.py  nameserver.py
distributed/pyro4/multi_servers/: greeting-client.py
distributed/pyro4/pyro4_long_connnection/: greeting-server-long-connection.py
dump_load_speed/: CMakeLists.txt  README.md  test.cpp  test_async.cpp  test_thread.cpp
dump_load_speed/include/: ocv_async.hpp  ocv_stb.hpp
lcm_demo/: CMakeLists.txt  HEADER.hpp  buffer_demo.cpp
notes/: python_gui.md  video_streaming.md
speedup_np/: mask2color.py
thrust_demo/: CMakeLists.txt  README.md  build.sh  vector_sort.cu
videos/: CMakeLists.txt  README.md  main.cpp
